--- a/public/blogs/Learners_Manifesto.html
+++ b/public/blogs/Learners_Manifesto.html
@@ -101,7 +101,7 @@ This fast world we have inherited is not going to slow down any time within our 
           <a href="https://www2.deloitte.com/content/dam/Deloitte/mx/Documents/technology/Coming-of-age-digitally.pdf" target="_blank">Workplace learning culture</a>
       </li>
       <li>
-        Images: Bing (Dall-e)
+        Images: Bing (Dall-E)
       </li>
   </ul>
 </p>
