--- a/public/blogs/Levels_Thinking.html
+++ b/public/blogs/Levels_Thinking.html
@@ -178,7 +178,7 @@
           <a href="https://www.buildingthelifeyouwant.com/blog/an-integral-theory-map" target="_blank">Article on Integral Theory</a>
       </li>
       <li>
-        Images: Bing (Dall-e)
+        Images: Bing (Dall-E)
       </li>
   </ul>
 </p>
