--- a/public/blogs/Time_Series.html
+++ b/public/blogs/Time_Series.html
@@ -16,9 +16,10 @@
   />
 </div>
 <br />
-<h1><b>The Glossary</b></h1>
-<br />
+<h2 style="font-size: 24px;"><b>The Glossary</b></h2>
+<br /><br />
 <h2 style="font-size: 22px;"><b>The Data</b></h2>
+<br />
 <ul>
   <li><b>Time Indexed:</b> The ID of each row in tabular time series data is the Date or timestamp of observation - this means data points or observations are associated with specific points or intervals in time, allowing for temporal ordering and analysis.</li>
   <li><b>Frequency:</b> The rate at which observations or events occur within a given time period, often expressed as the number of occurrences per unit time.</li>
@@ -38,6 +39,7 @@
 </ul>
 <br /><br />
 <h2 style="font-size: 22px;"><b>Pre-Processing</b></h2>
+<br />
 <ul>
   <li><b>Autocorrelation:</b> Autocorrelation measures the degree of linear relationship between a time series and a lagged version of itself. It assesses the extent to which past values of the series influence its current values. A high autocorrelation indicates a strong correlation between adjacent observations, suggesting the presence of underlying patterns or trends in the data.</li>
   <li><b>Covariance:</b> Covariance quantifies the extent to which two random variables vary together. In the context of time series analysis, covariance measures the degree of linear association between two time series. A positive covariance indicates that the variables move in the same direction, while a negative covariance suggests they move in opposite directions. Covariance is a key metric for understanding the relationship between different variables and assessing their joint variability over time.</li>
@@ -57,6 +59,7 @@
 <br/><br/>
 
 <h2 style="font-size: 22px;"><b>Modeling</b></h2>
+<br />
   <ul>
     <li><b>Autoregression:</b> A linear predictive model that uses past values of a variable to forecast its future values.</li>
     <li><b>Moving average:</b> A time series model that uses the weighted average of past errors to predict future values.</li>
@@ -72,6 +75,7 @@
   </ul>
   <br/><br/>
   <h2 style="font-size: 22px;"><b>Post-Modeling</b></h2>
+  <br />
   <ul>
   <li><b>Forecasting:</b> The process of making predictions about the future based on analyzing past and present data.</li>
   <li><b>Prediction intervals:</b> Statistical estimates that provide a range of likely values for a future observation, accounting for the uncertainty in the prediction.</li>
@@ -85,7 +89,7 @@
   </ul>
 <br /><br />
 <p>
-  The hope is that this will help anyone starting on analysing time series data know the terms experts use, and also an easy link for me to share with someone to explain an idea.
+  The hope is that this might help someone starting on analysing time series data know the terms experts use, and also an easy link for me to share with someone to explain an idea.
 </p>
 <br /><br /><br />
 <p>
@@ -98,7 +102,7 @@
         <a href="https://builtin.com/data-science/time-series-model" target="_blank">Introductory modeling</a>
       </li>
       <li>
-        Images: Bing (Dall-e)
+        Images: Bing (Dall-E)
       </li>
   </ul>
 </p>
