--- a/public/blogs/AI_Definitions.html
+++ b/public/blogs/AI_Definitions.html
@@ -24,18 +24,21 @@ And the floodgates opened.<br /><br />
 
 <div
   className="scpost-img"
-  style="display: flex; align-items: center; justify-content: center"
+  style="display: flex; flex-direction: column; align-items: center; justify-content: center"
 >
-  <img
-    style="border-radius: 8px; width: 32vw; padding: 5px;"
-    src="https://github.com/s7chak/Blogage/blob/master/pix/scaiverse-blogs/aipubs.png?raw=true"
-    alt="AI Boom"
-  />
-  <img
-    style="border-radius: 8px; width: 50vw; padding: 5px;"
+<img
+    style="border-radius: 8px; width: auto; padding: 5px;"
     src="https://github.com/s7chak/Blogage/blob/master/pix/scaiverse-blogs/100m.png?raw=true"
     alt="AI Hype"
   />
+  <p>The rise of AI popularity</p>
+  <img
+    style="border-radius: 8px; width: auto; padding: 5px;"
+    src="https://github.com/s7chak/Blogage/blob/master/pix/scaiverse-blogs/aipubs.png?raw=true"
+    alt="AI Boom"
+  />
+  <p>The rise of AI in academia.</p>
+  
 </div>
 <br />
 From passing the Turing test to passing actual real-world exams, from average writers to fully generated personas, from scrappy web developers to digital artists, from musicians, therapists, lawyers, doctors to AI entrepreneurs, a whole universe of AI opened up from the hype of one startup's chatty bot. Most likely because it didn't feel like a non-human - there were sparks of humanity. There is immense potential in this general purpose technology, which it truly is and will impact most industries on the planet. But potential can be directed both positively and negatively with huge promise and concern at the same time. And now that so much attention, mine included, is at this one technology I want to ponder over the many heads of this creature - the fields impacted, some thoughts on where we might be going with this new, kinda smart friend of ours.<br />
@@ -48,7 +51,7 @@ Till then as Charlie Munger put it, "old-fashioned intelligence works pretty wel
   style="display: flex; align-items: center; justify-content: center"
 >
 <img
-    style="border-radius: 10px; width: 50vw;"
+    style="border-radius: 8px; width: auto;"
     src="https://github.com/s7chak/Blogage/blob/master/pix/scaiverse-blogs/gptvbrain.jpeg?raw=true"
     alt="Brain vs AI"
   />
