Scaiblogs clean_ai()

--- a/public/blogs/AI_Definitions.html
+++ b/public/blogs/AI_Definitions.html
@@ -1,7 +1,7 @@
 <p><i>Past the hype, what it is and what it can do.</i></p>
 <br />
 <br/>
-<div
+<!-- <div
   className="scpost-img"
   style="display: flex; align-items: center; justify-content: center"
 >
@@ -10,7 +10,7 @@
     src="https://github.com/s7chak/Blogage/blob/master/pix/scaiverse-blogs/ai-human.jpg?raw=true"
     alt="The next mind"
   />
-</div>
+</div> -->
 <br/>
 <h2 style="font-size: 24px;"><b>What is this thing?</b></h2>
 <br />
@@ -73,9 +73,9 @@ Till then as Charlie Munger put it, "old-fashioned intelligence works pretty wel
       <li>
         <a href="https://www.youtube.com/watch?v=_6R7Ym6Vy_I&pp=ygUObGFwYXRhIHRhbGsgYWk%3D" target="_blank">Images: Talk on Gen AI</a>
       </li>
-      <li>
+      <!-- <li>
         Images: Bing (Dall-E)
-      </li>
+      </li> -->
   </ul>
 </p>
 <br />
