--- a/public/blogs/AI_Two_Ways.html
+++ b/public/blogs/AI_Two_Ways.html
@@ -1,7 +1,7 @@
 <p><i>A potential panacea to all our troubles and unlimited progress, versus the ultimate doom of humanity. So, AI bliss or Skynet?</i>
 </p>
 <br />
-<div
+<!-- <div
   className="scpost-img"
   style="display: flex; align-items: center; justify-content: center"
 >
@@ -10,7 +10,7 @@
     src="https://github.com/s7chak/Blogage/blob/master/pix/scaiverse-blogs/ai-2-ways.jpg?raw=true"
     alt="AI:2 ways"
   />
-</div>
+</div> -->
 <br/>
 <p>
   <h2 style="font-size: 24px;"><b>The Now and the Future</b></h2>
@@ -65,8 +65,8 @@ This was the moment after which humanity looked very different. We had an all-kn
       <li>
         <a href="https://cloud.google.com/discover/what-are-ai-hallucinations" target="_blank">Bad AI</a>
       </li>
-      <li>
+      <!-- <li>
         Images: Bing (Dall-E)
-      </li>
+      </li> -->
   </ul>
 </p>
