--- a/public/blogs/Learners_Manifesto.html
+++ b/public/blogs/Learners_Manifesto.html
@@ -31,7 +31,7 @@
   your eighties still picking up a book, still a student of life, keeping pace
   with the zeitgeist and engaging deeply with universe.
 </p>
-<br />
+<!-- <br />
 <div
   className="scpost-img"
   style="display: flex; align-items: center; justify-content: center"
@@ -41,7 +41,7 @@
     src="https://github.com/s7chak/Blogage/blob/master/pix/scaiverse-blogs/learner.jpg?raw=true"
     alt="always learnin'"
   />
-</div>
+</div> -->
 <br /><br />
 <b>Curiosity is Paramount</b><br />
 This was literally what birthed Science - the driving force behind all discoveries, technological advancements, and humanity's collective progress. The curious mind is never stagnant, and has consistently been a catalyst for exploration and better understanding.
@@ -87,7 +87,6 @@ This fast world we have inherited is not going to slow down any time within our 
 </p>
 <br />
 <br />
-<br /><br /><br />
 <p>
   <b>Reference</b>
   <ul>
@@ -100,9 +99,9 @@ This fast world we have inherited is not going to slow down any time within our 
       <li>
           <a href="https://www2.deloitte.com/content/dam/Deloitte/mx/Documents/technology/Coming-of-age-digitally.pdf" target="_blank">Workplace learning culture</a>
       </li>
-      <li>
+      <!-- <li>
         Images: Bing (Dall-E)
-      </li>
+      </li> -->
   </ul>
 </p>
 <br />
