--- a/public/blogs/Levels_Thinking.html
+++ b/public/blogs/Levels_Thinking.html
@@ -22,7 +22,7 @@
 <p>
   About these levels, they go up from basal instincts and thinking patterns to more holistic, integrated, nuanced and possibly to a more conscious way of thinking. Going up is not necessarily good and staying down is not bad, or so they say. And that's it for the disclaimers before we go through them one by one. The levels are written from bottom to top as they make sense in altitudes of not really consciousness, but - it is difficult to put in words, so I'll use what I have for now - possibly sophistication.
 </p>
-<br />
+<!-- <br />
 <br />
 <div
   className="scpost-img"
@@ -33,10 +33,8 @@
     src="https://github.com/s7chak/Blogage/blob/master/pix/scaiverse-blogs/levels-2.jpg?raw=true"
     alt="level up"
   />
-</div>
+</div> -->
 <br />
-
-
 <ul>
   <li>
     <b>Transcendent:</b> Transcendent thinking represents the highest level of
@@ -111,7 +109,7 @@
 </ul>
 <br />
 <br />
-<div
+<!-- <div
   className="scpost-img"
   style="display: flex; align-items: center; justify-content: center"
 >
@@ -121,7 +119,7 @@
     alt="transcend"
   />
 </div>
-<br />
+<br /> -->
 <p>
   These levels of thinking are neither rigid nor mutually exclusive. People
   generally exhibit characteristics of multiple levels simultaneously or glide
@@ -167,7 +165,7 @@
   the higher levels and keep returning back to reality, or pragmatism when the
   time calls.
 </p>
-<br /><br /><br />
+<br />
 <p>
   <b>Reference</b>
   <ul>
@@ -177,9 +175,9 @@
       <li>
           <a href="https://www.buildingthelifeyouwant.com/blog/an-integral-theory-map" target="_blank">Article on Integral Theory</a>
       </li>
-      <li>
+      <!-- <li>
         Images: Bing (Dall-E)
-      </li>
+      </li> -->
   </ul>
 </p>
 <br />
