--- a/public/blogs/Time_Series.html
+++ b/public/blogs/Time_Series.html
@@ -4,7 +4,7 @@
   I seem to have gravitated towards time and this niche of machine learning problem. Initially struggling with the statistical jargon of this field, I wanted to build one place for all the terms involved in this thing called Time Series Analysis. Essentially we are looking at some variable, metric, measurable quantity, a number, evolve over time, noticing patterns and anomalies in it and using that insight to predict its future trajectory.
   People starting off in machine learning generally start at Linear regression, learn about classification next, neural networks third, the fancy CNNs, RNNs after that, some natural language processing and preliminary LLMs maybe sprinkled for the zeitgeist, maybe a hint of network analytics and visualizations - or at least that has been my journey for better or for worse? We shall see. Here in this space I want to talk about a very close cousin of linear regression - time series analysis. Primarily what all those statistical terms mean, why they could be useful for the right problem.
 </p>
-<br/>
+<!-- <br/>
 <div
   className="scpost-img"
   style="display: flex; align-items: center; justify-content: center"
@@ -14,7 +14,7 @@
     src="https://github.com/s7chak/Blogage/blob/master/pix/scaiverse-blogs/time-init.jpg?raw=true"
     alt="timed data"
   />
-</div>
+</div> -->
 <br />
 <h2 style="font-size: 24px;"><b>The Glossary</b></h2>
 <br /><br />
@@ -92,7 +92,7 @@
 <p>
   The hope is that this might help someone starting on analysing time series data know the terms experts use, and also an easy link for me to share with someone to explain an idea.
 </p>
-<br /><br /><br />
+<br />
 <p>
   <b>Reference</b>
   <ul>
@@ -102,9 +102,9 @@
       <li>
         <a href="https://builtin.com/data-science/time-series-model" target="_blank">Introductory modeling</a>
       </li>
-      <li>
+      <!-- <li>
         Images: Bing (Dall-E)
-      </li>
+      </li> -->
   </ul>
 </p>
 <br />
